platform-components/model-gateway/litellm-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm
  namespace: genai
  labels:
    app: litellm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
      - name: litellm
        image:  public.ecr.aws/p7b6k2h9/fmamazon/genai-eks:litellm-main-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - NET_RAW
          seccompProfile:
            type: RuntimeDefault
        resources:
          limits:
            cpu: 2
            memory: 2Gi
            ephemeral-storage: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
            ephemeral-storage: 100Mi
        livenessProbe:
          httpGet:
            path: /health/liveliness
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/readiness
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 10        
        args: [ "--config", "/app/config.yaml"]  
        # args: [ "--config", "/app/config.yaml", "--detailed_debug"]  
        volumeMounts:
        - name: config-volume
          readOnly: true
          mountPath: /app/config.yaml
          subPath: config.yaml
        - name: guardrail-volume
          mountPath: /app/custom_guardrail.py
          subPath: custom_guardrail.py
        - name: litellm-secrets-volume
          mountPath: /etc/litellm-secrets
          readOnly: true
        - name: langfuse-secrets-volume
          mountPath: /etc/langfuse-secrets
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: litellm-config
      - name: guardrail-volume
        configMap:
          name: custom-guardrail-config
      - name: litellm-secrets-volume
        secret:
          secretName: litellm-secrets
      - name: langfuse-secrets-volume
        secret:
          secretName: litellm-langfuse-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: genai
spec:
  selector:
    app: litellm
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: genai
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
      - name: postgres
        image: postgres@sha256:8f6fbd24a12304d2adc332a2162ee9ff9d6044045a0b07f94d6e53e73125e11c
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
          name: postgres
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - NET_RAW
          seccompProfile:
            type: RuntimeDefault
        resources:
          limits:
            cpu: 1
            memory: 1Gi
            ephemeral-storage: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
            ephemeral-storage: 100Mi
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres
        - name: postgres-secrets
          mountPath: /etc/postgresql-secrets
          readOnly: true
      volumes:
      - name: postgres-secrets
        secret:
          secretName: litellm-secrets
          items:
          - key: postgres-password
            path: postgres-password
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: genai
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: postgres  

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: genai
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
      - name: redis
        image: redis@sha256:f923bcecfa76b1fa52cf24265196f07497db6b96f37a151852d8fe782c437026
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - NET_RAW
          seccompProfile:
            type: RuntimeDefault
        resources:
          limits:
            cpu: 1
            memory: 512Mi
            ephemeral-storage: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
            ephemeral-storage: 100Mi
        command: ["/bin/sh"]
        args: ["-c", "redis-server --requirepass $(cat /etc/redis-secrets/redis-password)"]
        volumeMounts:
        - name: redis-secrets-volume
          mountPath: /etc/redis-secrets
          readOnly: true
      volumes:
      - name: redis-secrets-volume
        secret:
          secretName: litellm-secrets
          items:
          - key: redis-password
            path: redis-password
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: genai
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
