platform-components/model-gateway/litellm-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: genai
  labels:
    app.kubernetes.io/name: LoadBalancerController
  name: litellm-alb
spec:
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: litellm-params

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litellm-ingress-alb
  namespace: genai
spec:
  ingressClassName: litellm-alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: litellm
                port:
                  number: 4000
